[package]
name = "video"
version = "0.1.0"
edition = "2021"
authors = ["Alexandra Iordache <alexandra.iordache@gmail.com>"]
license = "Apache-2.0"

[lib]

[dependencies]
gstreamer = "0.23.3"
gstreamer-video = "0.23.3"
glib = "0.20.6"
glib-sys = "0.20.6"
gobject-sys = "0.15"

util = { path = "../util"}